# bzm-mcp

./: .gitignore  README.md  REGRESSION_PROMPTS.md  SECURITY.md  bzm-mcp-macos-arm64.spec  directory.txt  main.py  mend.config  pyproject.toml
.github/workflows/: build.yaml  commit-dist.yaml  docker-multiplatform.yaml  mend-scan.yaml  tests.yaml
blazemeter-tests/: example-spec.ts  example.spec.ts  execute-playwright.sh  package-lock.json  package.json  perforce-metrics.test.ts  perforce-metrics2.test.ts  perforce-test.ts  performance-fixture.ts  playwright.config.ts  playwright.yaml  web-vitals-report.csv
config/: path_mapper.py  security.py  token.py
formatters/: execution.py  failure_criteria_labels.py  test.py
models/: execution.py  failure_criteria.py  test.py
tests/: test_batch_controls.py  test_confirmation_behavior.py  test_datetime_utils.py  test_execution.py  test_failure_criteria.py  test_help_live_href_rendering.py  test_help_utils_href_interpolation.py  test_hierarchy_and_consent.py  test_http_request_security.py  test_path_mapper.py  test_required_args_tools.py  test_skills_manager_security.py  test_skills_utils_security.py  test_test_manager_location_policy.py  test_token_security.py  test_traceback_sanitization.py  test_upload_assets_security.py
tools/: account_manager.py  billing_manager.py  execution_manager.py  help_manager.py  help_utils.py  project_manager.py  report_manager.py  skills_manager.py  skills_utils.py  test_manager.py  user_manager.py  utils.py  webvitals.py  workspace_manager.py
(+11 files in other folders)
