[project]
name = "bzm-mcp"
version = "1.2.0"
description = "BlazeMeter MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.28.1",
    "mcp[cli]>=1.27.0",
    "pyjwt>=2.12.0",
    "starlette>=0.47.3",
    "pyinstaller>=6.17.0",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pydantic-settings>=2.10.1",
    "lxml>=5.3.0",
]

[project.scripts]
bzm-mcp = "main:main"

[tool.setuptools]
py-modules = ["main", "server"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools", "config", "models", "formatters", "resources"]

[tool.setuptools.package-data]
"resources" = ["**/*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
